
FIX      Fix TheGamesDB scraper. New asset titlescreen in TheGamesDB.
         See https://forums.thegamesdb.net/viewtopic.php?f=5&t=1947
         See https://github.com/Wintermute0110/plugin.program.AEL/issues/127

FIX      Fix launching of LNK ROM launchers with spaces in LNK filename.
         See https://github.com/Wintermute0110/plugin.program.AEL/issues/125


[B]Advanced Emulator Launcher | version 0.9.9 | 13 March 2020[/B]

FEATURE  [COLLECTIONS] When exporting ROM Collections assets are always exported. The option
         to export only metadata has been removed. When importing assets are also always
         imported to the ROM Collection asset directory.

FEATURE  [COLLECTIONS] Current way of storing the collection artwork, in a unified JSON file,
         is not good. Think of a good way to exporting collections (for example, store the
         artwork in a subdirectory).

FEATURE  [COLLECTIONS] Do not consolidate Collection artwork before exporting. Also, when
         importing always import to the Collection artwork directory. Exported artwork
         collection filenames in the JSON file must be relative, not absolute paths.

FEATURE  [COLLECTIONS] Store Collection ROMs artwork as filename_platformCompactName_assetType.png
         and not filename_ROMID_assetType.png. This solves a lot of problems of duplicate
         artwork. ROMs with same name are allowed on different platforms but not on the
         same platform, which makes sense. Collection own artwork use the special
         platform name 'collection'.

FEATURE  [CORE] Rename offline scraper XML databases to use new platform name.

FEATURE  [CORE] Changed the Offline Scraper XML fields. Now the XML files are not compatible
         with HyperSpin but they make more sense.

FEATURE  [CORE] Update the platform icons. Github issue #112.

FEATURE  [SCRAPERS] MAME offline scraper: include NPlayers field. Take it from nplayers.ini
